# data_processing

./: .env.compose  .gitignore  Dockerfile  Makefile  README.md  cron_entrypoint.sh  docker-compose.local.yaml  pyproject.toml
migrations/: last_version.txt
migrations/versions/: 2025_07_29-50df987ece50_init_project.py
src/: app_container.py  models.py  router.py  settings.py
src/analyzer/: polit_analyzator.py  repository.py
src/core/: logger.py  postgres.py
src/services/: news_api.py  rss_parser.py
