[tool.poetry]
name = "data-processing"
version = "0.1.0"
description = ""
authors = ["Ivan Smirnov <smirnovivanlalala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.116.1"
dependency-injector = "^4.48.1"
alembic = "^1.16.4"
pydantic-settings = "^2.10.1"
psycopg = "^3.2.9"
ruff = "^0.12.5"
mypy = "^1.17.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
